adaptive check universe block

--- a/less/assistans-media.less
+++ b/less/assistans-media.less
@@ -107,9 +107,6 @@
     .rectangle-decorate-block {
         right: -231px;
     }
-    .about {
-        width: 60%;
-    }
 
     .admission-form {
         
@@ -132,6 +129,26 @@
             width: 90px;
             font-size: 13px;
             padding: 8px 28px;
+        }
+    }
+
+     .check-universe {
+        &__btn {
+            margin: 4px 0;
+            max-width: 103px;
+            font-size: 13px;
+        }
+    }
+
+     .universe-item {
+        padding: 20px 9px 7px;
+        max-width: 61px;
+
+        &__title {
+            font-size: 10px;
+        }
+        &__text {
+            font-size: 8px;
         }
     }
 }
