--- a/css/assistans-media.css
+++ b/css/assistans-media.css
@@ -89,9 +89,6 @@
   .rectangle-decorate-block {
     right: -231px;
   }
-  .about {
-    width: 60%;
-  }
   .admission-form {
     padding: 18px;
   }
@@ -113,5 +110,20 @@
     width: 90px;
     font-size: 13px;
     padding: 8px 28px;
+  }
+  .check-universe__btn {
+    margin: 4px 0;
+    max-width: 103px;
+    font-size: 13px;
+  }
+  .universe-item {
+    padding: 20px 9px 7px;
+    max-width: 61px;
+  }
+  .universe-item__title {
+    font-size: 10px;
+  }
+  .universe-item__text {
+    font-size: 8px;
   }
 }
