--- a/css/assistans-media.css
+++ b/css/assistans-media.css
@@ -86,6 +86,20 @@
   .header-slider {
     background-position: 52%, 40%;
   }
+  .header-slider__mail-title {
+    font-size: 51px;
+  }
+  .header-slider__subtitle {
+    font-size: 20px;
+  }
+  .header-slider .dots-img {
+    width: 48px;
+    height: 36px;
+    margin-right: 15px;
+  }
+  .header-subtitle-decorate {
+    margin-left: -35px;
+  }
   .rectangle-decorate-block {
     right: -231px;
   }
@@ -116,6 +130,18 @@
     max-width: 103px;
     font-size: 13px;
   }
+  .check-universe__list::before {
+    top: 49%;
+  }
+  .check-universe__list::after {
+    top: 49%;
+  }
+  .check-universe .bottom-active::before {
+    top: 81%;
+  }
+  .check-universe .bottom-active::after {
+    top: 81%;
+  }
   .universe-item {
     padding: 20px 9px 7px;
     max-width: 61px;
@@ -125,5 +151,16 @@
   }
   .universe-item__text {
     font-size: 8px;
+  }
+  .top-active::before {
+    top: 17%;
+  }
+  .top-active::after {
+    top: 17%;
+  }
+}
+@media screen and (max-width: 800px) {
+  .header-slider {
+    background-position: 41%, 40%;
   }
 }
