--- a/less/assistans-media.less
+++ b/less/assistans-media.less
@@ -286,6 +286,22 @@
     
     }
 
+    .comment-item{
+        margin-bottom: 55px;
+        &__text{
+            margin-bottom: 17px;
+        }
+        &__btn {
+            margin-right: auto;
+        }
+        &--question::before {
+            height: 85.45px;
+            bottom: -84px
+        }
+    }
+
+  
+
     .forms-wrap {
         display: none;
     }
