--- a/css/assistant.css
+++ b/css/assistant.css
@@ -107,6 +107,7 @@
 .about-content {
   position: relative;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 .about-text {
