--- a/less/assistant.less
+++ b/less/assistant.less
@@ -125,6 +125,7 @@
 .about-content {
     position: relative;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 .about-text {
