--- a/less/assistans-media.less
+++ b/less/assistans-media.less
@@ -226,6 +226,7 @@
             border-radius: 28px;
         }
     }
+    
 
     .about,
     .check-universe__wrap {
@@ -337,5 +338,16 @@
     .quick-navigation,
     .about-form {
         display: none;
+    }
+}
+
+@media screen and (max-width: 700px){
+
+    .header-slider {
+        margin-bottom: 0;
+    }
+    .academic-header {
+        display: block;
+        margin-bottom: 20px;
     }
 }
