del decorate element

--- a/less/assistans-media.less
+++ b/less/assistans-media.less
@@ -336,7 +336,21 @@
     }
 
     .quick-navigation,
-    .about-form {
+    .about-form,
+    .diamond-decorate,
+    .rectangle-decorate-block{
+        display: none;
+    }
+    .about-section .arrow-decorate-right{
+        display: none;
+    }
+    .about-section .square-decorate {
+        display: none;
+    }
+    .comments-section .arrow-decorate-blue {
+        display: none;
+    }
+    .comments-section .arrow-decorate-greey {
         display: none;
     }
 }
