--- a/css/assistans-media.css
+++ b/css/assistans-media.css
@@ -274,7 +274,21 @@
     bottom: -84px;
   }
   .quick-navigation,
-  .about-form {
+  .about-form,
+  .diamond-decorate,
+  .rectangle-decorate-block {
+    display: none;
+  }
+  .about-section .arrow-decorate-right {
+    display: none;
+  }
+  .about-section .square-decorate {
+    display: none;
+  }
+  .comments-section .arrow-decorate-blue {
+    display: none;
+  }
+  .comments-section .arrow-decorate-greey {
     display: none;
   }
 }
