try adapive header

--- a/css/assistans-media.css
+++ b/css/assistans-media.css
@@ -166,19 +166,19 @@
 }
 @media screen and (max-width: 760px) {
   .header-decorate {
-    width: 491.76px;
-    height: 262.39px;
-    left: -64.38px;
-    top: -42px;
-    transform: none;
-    /* Linear */
+    left: -3%;
+    top: 80px;
+    height: 84px;
+    width: 100vw;
+    border-bottom: 164px solid rgba(0, 150, 235, 0.7);
+    border-left: 52px solid transparent;
+    border-right: 50px solid transparent;
+    background: transparent;
     border-radius: 28px;
+    transform: rotate(-180deg);
   }
   .header-decorate__inner {
-    width: 515px;
-    height: 261px;
-    left: -76px;
-    top: -27.33px;
+    background: transparent;
     transform: none;
     /* #0096EB */
     border-radius: 28px;
