--- a/less/assistans-media.less
+++ b/less/assistans-media.less
@@ -204,21 +204,19 @@
 
 
     .header-decorate {
-        
-        width: 491.76px;
-        height: 262.39px;
-        left: -64.38px;
-        top: -42px;
-        transform: none;
-        /* Linear */
-        
-        // background: linear-gradient(188.21deg, #0066FF -8.5%, #00369C 51.46%, #0031C4 130.73%, #018FF6 130.74%);
+        left: -3%;
+        top: 80px;
+        height: 84px;
+        width: 100vw;
+        border-bottom: 164px solid rgba(0, 150, 235, 0.7);
+        border-left: 52px solid transparent;
+        border-right: 50px solid transparent;
+        background: transparent;
         border-radius: 28px;
+        transform: rotate(-180deg);
+
         &__inner {
-            width: 515px;
-            height: 261px;
-            left: -76px;
-            top: -27.33px;
+         background: transparent;
             transform: none;
             /* #0096EB */
             
