--- a/css/style.css
+++ b/css/style.css
@@ -39,12 +39,12 @@ a {
   z-index: 9999;
 }
 .header--sticky {
-  background: #FFFFFF;
+  background: rgba(255, 255, 255, 0.85);
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
   padding: 12px 0px 22px;
 }
 .header--sticky .logo--header img {
-  width: 186.17px;
+  width: 200px;
   height: 43.27px;
 }
 .header--sticky .header__nav-sticky {
