--- a/css/assistans-media.css
+++ b/css/assistans-media.css
@@ -166,7 +166,12 @@
 }
 @media screen and (max-width: 760px) {
   .header-slider {
-    height: 307px;
+    height: 470px;
+    overflow: visible;
+    background-image: url('../img//photo/assistent-img-bg-mobile.png');
+  }
+  .header-slider-wrap {
+    height: 82px;
   }
   .header-slider__mail-title {
     font-size: 36px;
@@ -176,35 +181,43 @@
   }
   .header-slider__block {
     position: absolute;
-    top: -70%;
-    background-color: violet;
+    top: -23%;
     width: 60vw;
+  }
+  .header-decorate {
+    right: 0;
+    top: -50%;
   }
   .header-decorate__inner {
     width: 0;
     height: 0;
   }
-  .header-slider {
-    overflow: visible;
-  }
-  .header-slider-wrap {
-    height: 235px;
-  }
   .subtitle-wrap {
     margin-bottom: 0;
   }
   .header-decorate {
-    width: 100vw;
-    height: 314.67px;
-    background: url('../img//icons/header-decorate-mobile.png');
+    width: auto;
+    height: 82px;
+    right: 0;
+    top: -50%;
+    background: none;
     background-repeat: no-repeat;
     background-size: cover;
     transform: none;
   }
   .header-decorate__inner {
+    width: 0;
+    height: 0;
     background: transparent;
     border-radius: 28px;
     transform: none;
+  }
+  .header-decorate img {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 172px;
+    top: 230%;
   }
   .about,
   .check-universe__wrap {
