--- a/less/assistans-media.less
+++ b/less/assistans-media.less
@@ -202,7 +202,13 @@
 // mobile marcup
 @media screen and (max-width: 760px){
     .header-slider {
-        height: 307px;
+        height: 470px;
+        overflow: visible;
+        background-image: url('../img//photo/assistent-img-bg-mobile.png');
+
+        &-wrap {
+            height: 82px;
+        }
        &__mail-title {
         font-size: 36px;
     }
@@ -211,23 +217,20 @@
     }
     &__block {
         position: absolute;
-        top: -70%;
-        background-color: violet;
+        top: -23%;
         width: 60vw;
     }
 }
 
-.header-decorate__inner {
-    width: 0;
-    height: 0;
-}
+.header-decorate {
+    right: 0;
+    top: -50%;
+    &__inner {
+        width: 0;
+        height: 0;
+    }
 
-.header-slider {
-    overflow: visible;
-}
-
-.header-slider-wrap {
-height: 235px;
+    
 }
 
 .subtitle-wrap {
@@ -235,25 +238,28 @@ height: 235px;
 }
 
     .header-decorate {
-        width: 100vw;
-        // height: 145px;
+        width: auto;
+        height: 82px;
+        right: 0;
+        top: -50%;
         // width: 515px;
-height: 314.67px;
-        background: url('../img//icons/header-decorate-mobile.png');
+        background:none;
         background-repeat: no-repeat;
         background-size: cover;
         transform: none;
         &__inner {
-            // left: 0;
-            // top: 80px;
-            // height: 84px;
-            // width: 100vw;
-            // border-bottom: 164px solid rgba(0, 150, 235, 0.7);
-            // border-left: 52px solid transparent;
-            // border-right: 50px solid transparent;
+            width: 0;
+            height: 0;
             background: transparent;
             border-radius: 28px;
             transform: none
+        }
+        img {
+            position: relative;
+            display: block;
+            width: 100%;
+            height: 172px;
+            top: 230%;
         }
     }
     
