--- a/css/assistant.css
+++ b/css/assistant.css
@@ -26,12 +26,21 @@
   border-radius: 28px;
   transform: matrix(0.71, -0.69, 0.72, 0.71, 0, 0);
 }
+.header-decorate img {
+  display: none;
+}
 .header-decorate__inner {
   position: absolute;
   width: 1178.66px;
   height: 995.03px;
   background: linear-gradient(273.52deg, #0066ff -9.04%, #00369c 41.93%);
   border-radius: 28px;
+}
+.btn--header-slider {
+  display: none;
+}
+.decor-arrow {
+  display: none;
 }
 .rectangle-decorate-block {
   top: -148px;
