--- a/less/assistant.less
+++ b/less/assistant.less
@@ -29,14 +29,26 @@
     background: rgba(0, 150, 235, 0.7);
     border-radius: 28px;
     transform: matrix(0.71, -0.69, 0.72, 0.71, 0, 0);
-
+    img {
+        display: none;
+      
+    }
         &__inner {
             position: absolute;
             width: 1178.66px;
             height: 995.03px;
             background: linear-gradient(273.52deg, #0066FF -9.04%, #00369C 41.93%);
             border-radius: 28px;
+           
     }
+}
+
+.btn--header-slider {
+    display: none;
+}
+
+.decor-arrow {
+    display: none;
 }
 
 .rectangle-decorate-block {
