--- a/less/assistans-media.less
+++ b/less/assistans-media.less
@@ -202,7 +202,7 @@
 // mobile marcup
 @media screen and (max-width: 760px){
     .header-slider {
-        height: 470px;
+        height: 370px;
         overflow: visible;
         background-image: url('../img//photo/assistent-img-bg-mobile.png');
 
@@ -218,18 +218,44 @@
     &__block {
         position: absolute;
         top: -23%;
-        width: 60vw;
+        width: 100%;
+        min-width: 100%;
     }
 }
+
+.header-subtitle-decorate {
+    margin-left: 1px;
+}
+
+.dots-img {
+    display: none;
+}
+.dots-img-mobile {
+    display: block;
+    margin-right: 9px;
+}
+
+.decor-arrow {
+    display: block;
+    position: absolute;
+    top: 37px;
+    right: 58px;
+}
+
 
 .header-decorate {
     right: 0;
     top: -50%;
+   
     &__inner {
         width: 0;
         height: 0;
     }
 
+    
+}
+.header-slider__subtitle {
+    display: flex;
     
 }
 
@@ -258,8 +284,8 @@
             position: relative;
             display: block;
             width: 100%;
-            height: 172px;
-            top: 230%;
+            height: 189px;
+            top: 160%;
         }
     }
     
@@ -371,6 +397,11 @@
         }
     }
 
+    .btn--header-slider {
+        display: block;
+        margin: 16px auto;
+        width: 95px;
+    }
     .quick-navigation,
     .about-form,
     .diamond-decorate,
