change header hover items

--- a/css/assistant.css
+++ b/css/assistant.css
@@ -42,6 +42,9 @@
 .decor-arrow {
   display: none;
 }
+.dots-img-mobile {
+  display: none;
+}
 .rectangle-decorate-block {
   top: -148px;
   right: 101px;
