--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ a {
 }
 .header--sticky .logo--header img {
   width: 200px;
-  height: 43.27px;
+  height: 47px;
 }
 .header--sticky .header__nav-sticky {
   display: flex;
@@ -99,22 +99,22 @@ a {
 }
 .hover-items {
   position: absolute;
-  padding-top: 30px;
+  padding-top: 32px;
   display: none;
   transition: 0.3s;
 }
 .hover-items::before {
   content: "";
   position: absolute;
-  top: -2px;
+  top: 0;
   left: 0;
   border: 17px solid transparent;
-  border-bottom: 15px solid rgba(244, 244, 244, 0.9);
-  border-left: 20px solid rgba(244, 244, 244, 0.9);
+  border-bottom: 15px solid #fff;
+  border-left: 20px solid #fff;
 }
 .hover-items__list {
   padding: 20px 20px 20px 30px;
-  background-color: rgba(244, 244, 244, 0.9);
+  background-color: #ffffff;
   border-radius: 6px;
   border-top-left-radius: 0;
 }
@@ -123,11 +123,11 @@ a {
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
 }
 .hover-items--stiky::before {
-  border-bottom: 15px solid #fff;
-  border-left: 20px solid #fff;
+  border-bottom: 15px solid rgba(244, 244, 244, 0.9);
+  border-left: 20px solid rgba(244, 244, 244, 0.9);
 }
 .hover-items--stiky .hover-items__list {
-  background-color: #ffffff;
+  background-color: rgba(244, 244, 244, 0.9);
   opacity: 1 !important;
 }
 .header__item:hover > .hover-items {
@@ -1029,6 +1029,7 @@ summary {
   margin: 0 20px;
   background-color: #fff;
   transition: 0.3s;
+  box-shadow: 0px 13px 18px rgba(0, 0, 0, 0.25);
 }
 .slider-item:hover {
   transform: scale(1.2);
