--- a/less/style.less
+++ b/less/style.less
@@ -56,7 +56,7 @@ a{
         .logo--header {
             img {
                 width: 200px;
-                height: 43.27px;
+                height: 47px;
             }
         }
 
@@ -125,22 +125,26 @@ a{
 
 .hover-items {
     position: absolute;
-    padding-top: 30px;
+    padding-top: 32px;
     display: none;
     transition: 0.3s;
      &::before {
          content: "";
          position: absolute;
-         top: -2px;
+         top: 0;
          left: 0;
          border: 17px solid transparent;
-         border-bottom: 15px solid rgba(244, 244, 244, 0.9);
-         border-left: 20px solid rgba(244, 244, 244, 0.9);
+        //  border-bottom: 15px solid rgba(244, 244, 244, 0.9);
+        //  border-left: 20px solid rgba(244, 244, 244, 0.9);
+        border-bottom: 15px solid #fff;
+        border-left: 20px solid #fff;
      }
 
     &__list{
         padding: 20px 20px 20px 30px;
-        background-color: rgba(244, 244, 244, 0.9);
+        background-color: rgba(255, 255, 255, 1);
+
+        // background-color: rgba(244, 244, 244, 0.9);
         border-radius: 6px;
         border-top-left-radius: 0;
     }
@@ -149,11 +153,17 @@ a{
     opacity: 1 !important;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
     &::before {       
-        border-bottom: 15px solid #fff;
-        border-left: 20px solid #fff;
+        // border-bottom: 15px solid #fff;
+        // border-left: 20px solid #fff;
+
+        border-bottom: 15px solid rgba(244, 244, 244, 0.9);
+        border-left: 20px solid rgba(244, 244, 244, 0.9);
     }
     .hover-items__list {
-        background-color: rgba(255, 255, 255, 1);
+
+        // background-color: rgba(255, 255, 255, 1);
+        background-color: rgba(244, 244, 244, 0.9);
+
         opacity: 1 !important;
     }
 }
@@ -1172,7 +1182,6 @@ summary {
         .slick-track {
             padding: 45px 0;
         }
-
        
 }
 
@@ -1196,9 +1205,7 @@ summary {
     button {
         display: none;
     }
-
-}
-
+    }
 
 }
 
@@ -1219,8 +1226,7 @@ summary {
     margin: 0 20px;
     background-color: #fff;
     transition: 0.3s;
-  
-
+    box-shadow: 0px 13px 18px rgba(0, 0, 0, 0.25);
     &:hover {
         transform: scale(1.2);
         border-bottom: 5px solid #CE0000;
