--- a/less/assistans-media.less
+++ b/less/assistans-media.less
@@ -64,19 +64,31 @@
 }
 
 @media screen and (max-width: 1200px) {
+    .header-slider{
+        // background-size: cover;
+        &__mail-title {
+            font-size: 55px;
+        }
+        &__subtitle {
+            font-size: 27px; 
+        }
+        &__block {
+            margin-top: 80px;
+        }
+    }
     .header-decorate {
         right: 55%;
         top: -156%;
     }
-    .header-slider__mail-title {
-        font-size: 55px;
-    }
-    .header-slider__subtitle {
-        font-size: 27px; 
-    }
-    .header-slider__block {
-        margin-top: 80px;
-    }
+    // .header-slider__mail-title {
+    //     font-size: 55px;
+    // }
+    // .header-slider__subtitle {
+    //     font-size: 27px; 
+    // }
+    // .header-slider__block {
+    //     margin-top: 80px;
+    // }
 
     .universe-item {       
         max-width: 80px;
@@ -102,7 +114,7 @@
 
 @media screen and (max-width: 997px){
     .header-slider {
-        background-position: 52%, 40%;
+        background-position: 46%, 0;
         &__mail-title {
             font-size: 51px;
         }
@@ -195,7 +207,7 @@
 
 @media screen and (max-width: 800px){
     .header-slider {
-        background-position: 41%, 40%;
+        background-position: 41%, 0;
     }
 }
 
@@ -205,7 +217,7 @@
         height: 370px;
         overflow: visible;
         background-image: url('../img//photo/assistent-img-bg-mobile.png');
-
+        background-size: cover;
         &-wrap {
             height: 82px;
         }
@@ -401,6 +413,8 @@
         display: block;
         margin: 16px auto;
         width: 95px;
+        padding: 7px 13px;
+    font-size: 12px;
     }
     .quick-navigation,
     .about-form,
