--- a/less/style.less
+++ b/less/style.less
@@ -1950,38 +1950,25 @@ textarea {
 .footer {
     // padding-top: 65px;
     background: linear-gradient(177.39deg, #0066FF -13.52%, #00318E 32.41%);
-position: relative;
+
+    position: relative;
 &::before {
     content: "";
     z-index: -999999;
-position: absolute;
-top: -30px;
-left: 50%;
-transform: translate(-50%, 0);
+    position: absolute;
+    top: -30px;
+    left: 50%;
+    transform: translate(-50%, 0);
 
-width: 479.5px;
-height: 76.58px;
-border-radius: 30px;
-padding: 12px 90px 17px;
+    width: 479.5px;
+    height: 76.58px;
+    border-radius: 30px;
+    padding: 12px 90px 17px;
 
-background: #0052d5;
-// background: #3DADD0;
+    background: linear-gradient(90deg, #014FCF -0.05%, #0152D4 100.05%);// background: #3DADD0;
 
 }
-// .footer-decarate {
-//     z-index: -999999;
-//     position: absolute;
-//     top: -30px;
-//     left: 50%;
-//     transform: translate(-50%, 0);
-    
-//     width: 479.5px;
-//     height: 76.58px;
-//     border-radius: 30px;
-//     padding: 12px 90px 17px;
-    
-//     background: #004ecb
-// }
+
 }
 .telephones {
     top: -18px;
@@ -1990,23 +1977,7 @@ background: #0052d5;
     left: 50%;
     transform: translate(-50%, 0);
     display: inline-flex;
-    // display: flex;
     justify-content: center;
-    // position: absolute;
-    // display: inline-flex;
-    // top: -30px;
-    // left: 50%;
-    // transform: translate(-50%, 0);
-
-   
-    // z-index: -1;
-
-    // border-radius: 30px;
-    // padding: 12px 90px 17px;
-
- // background: #004ecb; 
-   
-   
    
     &__inner {
         display: flex;
@@ -2077,7 +2048,6 @@ background: #0052d5;
     }
     &__input {
         padding: 12px 0 12px 15px;
-        // margin: 0px 20px;
       
         background: #FFFFFF;
         border: 1px solid #BDBDBD;
@@ -2115,7 +2085,6 @@ background: #0052d5;
         font-style: normal;
         font-size: 22px;
         color: #fff;
-        // margin-left: auto;
     }
   
 }
